Clean some warnings